--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: cmake and build
-      run: mkdir build && cd build && cmake ..
+      run: mkdir build && cd build && cmake .. && make
