--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,5 @@ set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
-add_library(nbit SHARED src/nbit.hpp)
+add_library(nbit SHARED src/set.hpp)
 set_target_properties(nbit PROPERTIES LINKER_LANGUAGE CXX)
