--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,16 +8,20 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    container: igorbaratta/nbit
+    env:
+      CC: clang-10
+      CXX: clang++-10
     steps:
     - uses: actions/checkout@v2
-           
-    - name: cmake and build
-      run: mkdir build && cd build && cmake .. && make
-    - name: run tests
+    - name: Cmake and Build
       run: |
-            cd tests/
-            source run_all.sh
-    
+          mkdir build 
+          cd build 
+          cmake .. 
+          make
+    - name: Build and run C++ unit tests
+      run: |
+          cd build 
+          ctest -C Release -T test --output-on-failure
