--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,3 +25,4 @@ jobs:
       run: |
           cd build 
           ctest -C Release -T test --output-on-failure
+          bash <(curl -s https://codecov.io/bash)
