--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,4 +25,6 @@ jobs:
       run: |
           cd build 
           ctest -C Release -T test --output-on-failure
-          bash <(curl -s https://codecov.io/bash)
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+
