Fix test framework (#8)
* remove catch2

* improve test functionalities

* Update c-cpp.yml

* try to fix tests

* Update c-cpp.yml

* Update c-cpp.yml

* Update c-cpp.yml

* Update c-cpp.yml

* Update c-cpp.yml

* remove catch2 tests

* more fixes

* add new options to dockerfile

* try to set coverage

* remove unecessary lines

* add new google benchmarks

* fix test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(nbit CXX)
+project(nbit LANGUAGES CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -25,6 +25,6 @@ add_library(nbit STATIC
             src/par_set.hpp)
 
 add_subdirectory(tests)
-# add_subdirectory(benchmarks)
+add_subdirectory(benchmarks)
 
 set_target_properties(nbit PROPERTIES LINKER_LANGUAGE CXX)
