--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(nbit_test CXX)
+project(nbit_test LANGUAGES CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -9,8 +9,22 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(GTest REQUIRED)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
+
 add_executable(nbit_test test.cpp)
 
-target_link_libraries(nbit_test PUBLIC gtest gtest_main pthread nbit)
+target_compile_options(nbit_test PUBLIC -fprofile-arcs -ftest-coverage)
+target_link_libraries(nbit_test PUBLIC gtest gtest_main pthread -fprofile-arcs -ftest-coverage)
 
-add_test(NAME nbit_test COMMAND nbit_test --gtest_repeat=5)
+
+# collect all source files from the chosen include dir
+file(GLOB_RECURSE SOURCE_FILES src/set.hpp)
+
+
+add_custom_target(lcov
+    COMMAND lcov --directory . --capture --output-file coverage.info # parse coverage data
+    COMMAND lcov -e coverage.info ${SOURCE_FILES} --output-file coverage.info # filter
+    COMMAND coveralls-lcov coverage.info  # upload results
+)
+
+add_test(NAME nbit_test COMMAND nbit_test)
