--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -19,9 +19,15 @@ if(COMPILER_SUPPORTS_O3)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 endif()
 
-set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -pthread")
 
 find_package(benchmark REQUIRED)
 
-add_executable(nbit_bench benchmark_synthetic.cpp)
-target_link_libraries(nbit_bench PRIVATE benchmark::benchmark)
+add_executable(insert benchmark_insert.cpp)
+target_link_libraries(insert PRIVATE benchmark::benchmark)
+
+add_executable(intersect benchmark_intersect.cpp)
+target_link_libraries(intersect PRIVATE benchmark::benchmark)
+
+add_executable(union benchmark_union.cpp)
+target_link_libraries(union PRIVATE benchmark::benchmark)
