--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,20 +11,21 @@ find_package(GTest REQUIRED)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
 
-add_executable(nbit_test test.cpp)
+add_executable(test_insert test_insert.cpp)
+add_executable(test_intersection test_intersection.cpp)
+add_executable(test_union test_union.cpp)
+add_executable(test_difference test_difference.cpp)
+add_executable(test_symmetric_difference test_symmetric_difference.cpp)
 
-target_compile_options(nbit_test PUBLIC -fprofile-arcs -ftest-coverage)
-target_link_libraries(nbit_test PUBLIC gtest gtest_main pthread -fprofile-arcs -ftest-coverage)
+target_link_libraries(test_insert  PUBLIC gtest gtest_main pthread)
+target_link_libraries(test_intersection PUBLIC gtest gtest_main pthread)
+target_link_libraries(test_union PUBLIC gtest gtest_main pthread)
+target_link_libraries(test_difference PUBLIC gtest gtest_main pthread)
+target_link_libraries(test_symmetric_difference PUBLIC gtest gtest_main pthread)
 
+add_test(NAME test_insert COMMAND test_insert)
+add_test(NAME test_intersection COMMAND test_intersection)
+add_test(NAME test_union COMMAND test_union)
+add_test(NAME test_difference COMMAND test_difference)
+add_test(NAME test_symmetric_difference COMMAND test_symmetric_difference)
 
-# collect all source files from the chosen include dir
-file(GLOB_RECURSE SOURCE_FILES src/set.hpp)
-
-
-add_custom_target(lcov
-    COMMAND lcov --directory . --capture --output-file coverage.info # parse coverage data
-    COMMAND lcov -e coverage.info ${SOURCE_FILES} --output-file coverage.info # filter
-    COMMAND coveralls-lcov coverage.info  # upload results
-)
-
-add_test(NAME nbit_test COMMAND nbit_test)
