--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,9 +23,9 @@ target_link_libraries(test_union PUBLIC gtest gtest_main pthread)
 target_link_libraries(test_difference PUBLIC gtest gtest_main pthread)
 target_link_libraries(test_symmetric_difference PUBLIC gtest gtest_main pthread)
 
-add_test(NAME test_insert COMMAND test_insert)
-add_test(NAME test_intersection COMMAND test_intersection)
-add_test(NAME test_union COMMAND test_union)
-add_test(NAME test_difference COMMAND test_difference)
-add_test(NAME test_symmetric_difference COMMAND test_symmetric_difference)
+add_test(NAME test_insert COMMAND test_insert --gtest_repeat=10 --gtest_break_on_failure)
+add_test(NAME test_intersection COMMAND test_intersection --gtest_repeat=10 --gtest_break_on_failure)
+add_test(NAME test_union COMMAND test_union --gtest_repeat=10 --gtest_break_on_failure)
+add_test(NAME test_difference COMMAND test_difference --gtest_repeat=10 --gtest_break_on_failure)
+add_test(NAME test_symmetric_difference COMMAND test_symmetric_difference --gtest_repeat=10 --gtest_break_on_failure)
 
